close #59, close #60, close #61

--- a/codeFormatter/01.00-codeFormatter_tutorial.ipynb
+++ b/codeFormatter/01.00-codeFormatter_tutorial.ipynb
@@ -625,8 +625,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "02fec820-8000-4f8b-a704-1be75f3c9c1b",
+   "execution_count": 23,
+   "id": "4a1c0c42-749e-4447-ad2b-052d9511eb8a",
    "metadata": {
     "tags": []
    },
@@ -674,17 +674,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc419d99-600a-4fdf-88ef-7e5ce8b10a5e",
+   "id": "d577d53c-f05f-46a0-9a9b-50400bd4956c",
    "metadata": {},
    "source": [
-    "## Imports\n",
-    "\n",
-    "This has been kept for last"
+    "## Imports"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "149722c3-e9b8-4f7c-86ee-7c0a6a8c41f1",
+   "metadata": {},
+   "source": [
+    "This has been kept for last because import statements are generally not the first priority for code formatting. However, formatting import statements can be frustratingly difficult. The toybox imports below can be formatted with isort. You can run isort through the edit tab, as we have been running the other formatters, or you can just right click on the cell and use the \"Format Cell\" option, just like the very first example we saw."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "979eb040-67f0-4dc3-86c8-502761508661",
    "metadata": {},
    "outputs": [],
