quality of life update to codeFormatter tutorial

--- a/codeFormatter/01.00-codeFormatter_tutorial.ipynb
+++ b/codeFormatter/01.00-codeFormatter_tutorial.ipynb
@@ -719,6 +719,22 @@
     "from myclass import MyClass\n",
     "from foo.bar.yourclass import YourClass"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12ec13dd-ac9b-4653-b5f6-8aed81e0570f",
+   "metadata": {},
+   "source": [
+    "# Congratulations!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61b8f05d-05b0-46db-995c-38c90e580688",
+   "metadata": {},
+   "source": [
+    "You have now completed the tutorial for Code Formatter. If you want to learn more about code formatters and how to configure them for this extension, there is a detailed guide in the Code Formatter [documentation](https://jupyterlab-code-formatter.readthedocs.io/configuration.html#)."
+   ]
   }
  ],
  "metadata": {
