codeFormatter: Added Version Numbers

--- a/codeFormatter/01.00-codeFormatter_tutorial.ipynb
+++ b/codeFormatter/01.00-codeFormatter_tutorial.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "source": [
     "# Introduction to Code Formatter\n",
+    "#### Version 2.2.1\n",
     "\n",
     "This notebook is an introduction to the [jupyterlab-code-formatter](https://github.com/ryantam626/jupyterlab_code_formatter) extension. What is a code formatter and why is it useful? To start, take a look at the code cell below (a snippet encoding Runge-Kutta 2 from when I was learning to use Python to code some numerical methods). It is not formatted particularly well, though it is not awful. It can be made easier to read if you select the cell, right click it, and pick \"Format Cell\" from the options at the very bottom of that menu. Give it a shot!"
    ]
@@ -87,7 +88,8 @@
    "id": "e121b61e-b90c-483c-9d66-f3cbda7244b8",
    "metadata": {},
    "source": [
-    "### Black"
+    "### Black\n",
+    "##### Version 23.3.0"
    ]
   },
   {
@@ -121,7 +123,8 @@
    "id": "56cdf6c1-9531-4e16-bf36-acc2e698005c",
    "metadata": {},
    "source": [
-    "### YAPF"
+    "### YAPF\n",
+    "##### Version 0.40.1"
    ]
   },
   {
@@ -155,7 +158,8 @@
    "id": "342b7c10-8e65-44db-ac23-4ba401326331",
    "metadata": {},
    "source": [
-    "### autopep8"
+    "### autopep8\n",
+    "##### 2.0.2"
    ]
   },
   {
