gitExtension: cleaned gitExample and 01.00

--- a/gitExtension/01.00-git_tutorial.md
+++ b/gitExtension/01.00-git_tutorial.md
@@ -25,7 +25,7 @@ You should create a new branch and title it "gitExercise" using the <kbd>New Bra
 
 Now that you have created a new branch, it's time to do something interesting on it. If you haven't already, complete the Code Formatter tutorial because this example requires knowledge of using the Code Formatter extension included in this repository.
 
-First, go to the ```gitExample.ipynb``` file in the ```gitExtension``` folder and open it. This file is an example workflow borrowed from [Kaggle](https://www.kaggle.com/).<sup>[1](#kagglebook)</sup> To make changes to the notebook, we will format it with our different code formatters. To start, select every cell in the notebook and, using the <kbd>Edit</kbd> tab, format the whole notebook with the Black code formatter and save the file. This formatted notebook is a serious change from the original and should be committed as a change to your new branch.
+First, go to the ```gitExample.ipynb``` file in the ```gitExtension``` folder and open it. This file is an excellent workflow borrowed from [Kaggle](https://www.kaggle.com/).<sup>[1](#kagglebook)</sup> To make changes to the notebook, we will format it with our different code formatters. To start, select every cell in the notebook and, using the <kbd>Edit</kbd> tab, format the whole notebook with the Black code formatter and save the file. This formatted notebook is a serious change from the original and should be committed as a change to your new branch.
 
 #### Exercise 2: Commit Changes
 
