Added jedi package to envmt file using pip

--- a/01_technical_publication.ipynb
+++ b/01_technical_publication.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "88663a51-98b1-4620-8efd-62221adc5482",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Technical Publication with Quarto"
    ]
@@ -19,7 +21,9 @@
   {
    "cell_type": "markdown",
    "id": "ab8daa7b-0f57-4f23-a4cd-0d3f0d4a3de6",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Creating a Book"
    ]
@@ -91,7 +95,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
