gitExtension: Added License for gitExample
The gitExample.ipynb in this folder is from Kaggle. As such, it is my understanding that it is licensed under Apache 2.0. Though it is not fully clear that this is a Derivative Work of Kaggle API, the license has been included as a precautionary measure. It is not the project license, but it is the license that most likely applies to the Kaggle notebook used.

--- a/gitExtension/01.00-git_tutorial.md
+++ b/gitExtension/01.00-git_tutorial.md
@@ -72,3 +72,5 @@ You have now completed the Git extension tutorial! If you want to learn more abo
 # Acknowledgments
 
 #### <a name="kagglebook">1</a>: randomarnab. (May 2023) EDA on Data Science Salaries 📊, retrieved July 5th, 2023 from https://www.kaggle.com/code/arnabchaki/eda-on-data-science-salaries
+
+The filename of this notebook has been changed from "eda-on-data-science-salaries.ipynb" to "gitExample.ipynb". This is the only modification to the file present. This notebook, as a Kaggle notebook, is licensed under the Apache 2.0 License. The relevant LICENSE document is contained in this folder.
