--- a/02-lsp_extension/02.01-lsp_exercises1.ipynb
+++ b/02-lsp_extension/02.01-lsp_exercises1.ipynb
@@ -42,6 +42,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9d9b1271-7405-461d-90f2-fa0f766896fa",
+   "metadata": {},
+   "source": [
+    "As a reminder, LSP provides intelligent code completion suggestions, helping developers write code faster and with fewer errors. It suggests relevant code snippets, function names, variable names, and other context-specific completions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a3720729-8b75-4898-8fd3-e89f7221718a",
    "metadata": {
     "tags": []
@@ -192,6 +200,7 @@
    "cell_type": "markdown",
    "id": "0a676f55-c7be-428f-83c1-2864d9573e66",
    "metadata": {
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     },
@@ -515,7 +524,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.8.17"
   }
  },
  "nbformat": 4,
