Minor text edits

--- a/00_introduction.ipynb
+++ b/00_introduction.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "What makes JupyterLab - and notebooks in general - so special is that they are interative development environments; it is easy to try out small bits of code and learn by trial and error or iterating through small changes. This can make development much easier for scientists that don't have experience debugging or software engineering, but it is also simply a style of programming that works well for some people. Whether you take may be dependent what you're already used to, but may be well worth the switch if you give it a try.\n",
     "\n",
-    "But even if you are going to develop in notebooks, you are going to want to develop in a well-supported development environment. Before we make the switch will want to make sure that JupyterLab has the same level of support as other IDE's."
+    "But even if you are going to develop in notebooks, you are going to want to develop in a well-supported development environment. Before we make the switch, we will want to make sure that JupyterLab has the same level of support as other IDE's."
    ]
   },
   {
@@ -47,8 +47,7 @@
     "\n",
     "> An integrated development environment (IDE) is software for building applications that combines common developer tools into a single graphical user interface (GUI). An IDE typically consists of a source code editor, local build automation, and debugger. ~ [RedHat](https://www.redhat.com/en/topics/middleware/what-is-ide)\n",
     "\n",
-    "IDE's have text editors that have helpful features such as syntax highlighting, language sepecific auto-completion, and linters. \n",
-    "They have utilities that automate simple, repeatable tasks such as compiling. They have debuggers that help you dig through source code for the sources of errors in a visually helpful way. As we will see, JuptyerLab is totally capable of all these features."
+    "IDE's have text editors that have helpful features such as syntax highlighting, language sepecific auto-completion, and linters. They have utilities that automate simple, repeatable tasks such as compiling. They have debuggers that help you dig through source code for the sources of errors in a visually helpful way. As we will see, JuptyerLab is totally capable of all these features."
    ]
   },
   {
@@ -58,7 +57,10 @@
    "source": [
     "## The JuptyerLab \"IDE\"\n",
     "\n",
-    "JupyterLab doesn't ship with all the extensions that are needed to achieve IDE status. The goal of this repository is to create a Docker container that ships with all the neccessary components. This is almost entirely achieved through the addition of JupyterLab extensions. One benefit of using Docker is that it is deployable anywhere and easily shared with others!"
+    "This repository has two main goals: \n",
+    "\n",
+    "1. We aim to introduce you to features common to many integrated development environment from the comfort of JupyterLab. \n",
+    "2. JupyterLab doesn't ship with all the extensions that are needed to achieve IDE status. Together, we wil build a recipe of sorts so you can create a development environment you can reuse for all your Jupyter projects. This is almost entirely achieved through the addition of JupyterLab extensions. "
    ]
   },
   {
@@ -66,15 +68,13 @@
    "id": "f857ae0e-f005-4c57-93cf-0ed03582f75a",
    "metadata": {},
    "source": [
-    "## Why should you use it?\n",
+    "## Why should you use JupyterLab as your development environment?\n",
     "\n",
-    "It's sort of like deciding to use R vs. Python. It really depends more on which libraries are available for your domain than the features of the actual language itself. If you're a psychologist, you should probably use R. If you're bioinformatistician, you should go for Python.\n",
+    "There are a lot of IDEs out there. Why are we encouraging you use JupyterLab? We believe that using a tool you are already familiar with, such as notebooks can reduce the mental barrier it takes to learn better software practices that IDEs enable. \n",
     "\n",
-    "Likewise, data scientists, machine learning engineers, and computational scientists are well known for using for JupyterLab, which means many tools, extensions, and widgets are tailored to these audiences and usecases. Just so, you should probably use JuptyerLab if you are developing in a lot of notebooks, because it has the most open-source contributers solving problems specific to notebook users. \n",
+    "It's also sort of like deciding to use R vs. Python. It really depends more on which libraries are available for your domain than the features of the actual language itself. If you're a psychologist, you should probably use R. If you're bioinformatistician, you should go for Python.\n",
     "\n",
-    "### Alternatives\n",
-    "\n",
-    "JetBrains [DataSpell](https://www.jetbrains.com/dataspell/) IDE is a proprietary alternative to JupyterLab. [VSCode](https://code.visualstudio.com/docs/datascience/jupyter-notebooks) also supports notebooks. These are both well-developed IDEs that are appropriate for local and remote development. JetBrains is proprietary, and VSCode is free, but only JuptyerLab has a tool to preview a notebook as a standalone application with Voila. Of course this is achievable without a convenient integration."
+    "Likewise, data scientists, machine learning engineers, and computational scientists are well known for using for JupyterLab, which means many tools, extensions, and widgets are tailored to these audiences and usecases. Just so, you should probably use JuptyerLab if you are developing in a lot of notebooks, because it has the most open-source contributers solving problems specific to notebook users. "
    ]
   },
   {
@@ -102,7 +102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
