--- a/vim/01.00-vim_intro.ipynb
+++ b/vim/01.00-vim_intro.ipynb
@@ -7,16 +7,28 @@
     "tags": []
    },
    "source": [
-    "# JupyterLab Command and JupyterLab Edit\n",
-    "JupyterLab has two different modes when interacting with code in a notebook environment: command mode and edit mode.\n",
+    "# What is the benefit of Vim?\n",
     "\n",
-    "In command mode, the user is not directly editing any particular cells. Rather, the user is navigating the whole notebook and interacting with cells on a larger scale. If you right click on a cell, you should see options to cut, copy, and paste selected cells. Those commands are part of JupyterLab command mode.\n",
+    "This tutorial is best suited to users who have some familiarity with Vim. \n",
     "\n",
-    "In edit mode, the user is directly editing the contents of a cell. Without ```jupyterlab-vim```, this uses, with exceptions for JupyterLab specific shortcuts, the same keyboard shortcuts that you would use for a processor like Microsoft Word or something simple like Notepad (or whatever equivalent comes to mind for your particular operating system). With the addition of ```jupyterlab-vim```, JupyterLab edit mode is extended into several additional modes, each tied to Vim editor.\n",
+    "## What is the benefit of using Vim keybindings?\n",
+    "\n",
+    "Learning to use Vim keybindings is a time investment, but the benefit of it is that it helps you reduce use of your mouse, and instead use the keyboard to navigate and edit files. This has ergonomic benefits and it cuts down on the time it takes to perform everyday tasks.\n",
+    "\n",
+    "# What are the prerequisites for this tutorial?\n",
+    "\n",
+    "This tutorial is best suited to users who have at least passing familiarity with Vim. Specifically, you should be familiar with how to navigate through and save a file. Though there will be some review, this tutorial will build upon foundational concepts, so it is best to be at least familiar with Vim's insert and normal mode before learning additional material. If you need a review, there are many [interactive vim tutorials](https://www.openvim.com/) on the web.\n",
     "\n",
     "# Brief notes on Vim\n",
     "\n",
-    "Vim is a text editor first released in 1991. It has several convenient keyboard shortcuts that can help with quickly editing a document. These features can be accessed through two of Vim's different modes: insert and normal. While insert and normal are not the only vim modes available (visual, command, and replace modes are also implemented), these modes are the relevant modes for understanding the additional features in JupyterLab Command. These features have been brought to JupyterLab through the ```jupyterlab-vim``` extension. If you have used Vim before, most of this next section will be stuff you are already acquainted with. If you haven't used Vim before but you are interested in learning more and applying it to the JupyterLab environment, there are several excellent tutorials for how to use Vim. For now, we will stick to some basics in Vim's normal mode. These things serve as a precursor for how ```jupyterlab-vim``` operates uniquely with the cell-based notebook environment.\n",
+    "Vim is a text editor first released in 1991. It has several convenient keyboard shortcuts that can help with quickly editing a document. These features can be accessed through two of Vim's different modes: insert and normal. While insert and normal are not the only vim modes available (visual, command, and replace modes are also implemented), these modes are the relevant modes for understanding the additional features in JupyterLab Command. These features have been brought to JupyterLab through the ```jupyterlab-vim``` extension. For now, we will stick to some basics in Vim's normal mode. These things serve as a precursor for how ```jupyterlab-vim``` operates uniquely with the cell-based notebook environment.\n",
+    "\n",
+    "# JupyterLab Command and JupyterLab Edit\n",
+    "JupyterLab has two different modes when interacting with code in a notebook environment: command mode and edit mode (not to be confused with Vim's \"interactive\" and \"normal\" modes).\n",
+    "\n",
+    "In command mode, the user is *not* directly editting a particular cell. Rather, the user is navigating the whole notebook and navigating between cells on a larger scale. If you right click on a cell, you should see options to cut, copy, and paste selected cells. Those commands are part of JupyterLab command mode.\n",
+    "\n",
+    "In edit mode, the user is directly editing the contents of a cell. Without ```jupyterlab-vim```, edit mode has many of the same keyboard shortcuts that you would use for a processor like Microsoft Word or something simple like Notepad. With the ```jupyterlab-vim``` extension active, several more Vim-flavored edit modes become available.\n",
     "\n",
     "## Things you can do in Vim normal mode\n",
     "When you first edit text in a cell with the Vim extension enabled, you will start with a blinking cursor that indicates you are in normal mode. If you are editing a cell in insert mode, you can press <kbd>Escape</kbd> to enter normal mode.\n",
@@ -94,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
